With final changes from Jennie

--- a/code/index.html
+++ b/code/index.html
@@ -2,78 +2,76 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project 2: The News Site</title>
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-  <!-- dont forget the meta tag for responsiveness -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The upBeat</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-  <header>
-    <!-- Some kind of logo and navbar -->
-    <nav>
-      <div class=smiley>
-        <img class="logo" src="Smiley.png" alt=smiley>
-        <h1>The upBeat</h1>
-      </div>
-      <div class="hamburger">
-        <a href="/html/">Start</a>
-        <a href="/css/">Today</a>
-        <a href="/js/">Random</a>
-        <a href="/python/">Contact</a>
-      </div>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <div class=smiley>
+                <img class="logo" src="Smiley.png" alt=smiley>
+                <h1>The upBeat</h1>
+            </div>
+            <div class="hamburger">
+                <a href=" ">Start</a>
+                <a href=" ">Today</a>
+                <a href=" ">Random</a>
+                <a href=" ">Contact</a>
+            </div>
+        </nav>
+    </header>
 
-  <section class="big-news">
-    <article class=header>
-      <h2>The world hasn't ended!</h2>
-      <p>At least we have that going for us. Here we offer a respite from the news of darkness and despair and give you
-        upBeat news!</p>
-    </article>
-  </section>
+    <section class="big-news">
+        <article class="header">
+            <h2>The world hasn't ended!</h2>
+            <p>At least we have that going for us. Here we offer a respite from the news of darkness and despair and give you upBeat news!</p>
+        </article>
+    </section>
 
-  <hr>
+    <hr>
 
-  <section class="small-news">
-    <article class=smallstory>
-      <img class=articleimage src="least tern.jpeg" alt=least tern>
-      <div class=articletext>
-        <h4>Endangered bird, endangered no more!</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
-        </p>
-      </div>
-    </article>
+    <section class="small-news">
+        <article class="small-story">
+            <img class="article-image" src="least tern.jpeg" alt=least tern>
+            <div class="article-text">
+                <h4>Endangered bird, endangered no more!</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
+                </p>
+            </div>
+        </article>
 
-    <article class=smallstory>
-      <img class=articleimage src="pug.jpeg" alt=pug>
-      <div class=articletext>
-        <h4>A group of pugs = Grumble</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
-        </p>
-      </div>
-    </article>
+        <article class="small-story">
+            <img class="article-image" src="pug.jpeg" alt=pug>
+            <div class="article-text">
+                <h4>A group of pugs = Grumble</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
+                </p>
+            </div>
+        </article>
 
 
-    <article class=smallstory>
-      <img class=articleimage src="penpals.jpeg" alt=least tern>
-      <div class=articletext>
-        <h4>Penpals for 70 years!</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
-        </p>
-      </div>
-    </article>
+        <article class="small-story">
+            <img class="article-image" src="penpals.jpeg" alt=least tern>
+            <div class="article-text">
+                <h4>Penpals for 70 years!</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
+                </p>
+            </div>
+        </article>
 
 
-    <article class=smallstory>
-      <img class=articleimage src="fish.jpeg" alt=least tern>
-      <div class=articletext>
-        <h4>Did you know that fish can talk?</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
-        </p>
-      </div>
-    </article>
-  </section>
+        <article class="small-story">
+            <img class="article-image" src="fish.jpeg" alt=least tern>
+            <div class="article-text">
+                <h4>Did you know that fish can talk?</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis
+                </p>
+            </div>
+        </article>
+    </section>
