Edits after coach review

--- a/code/index.html
+++ b/code/index.html
@@ -15,9 +15,9 @@
   
  <!-- HEADER SECTION -->
 
-    <header class = "header-section"> 
-      <nav class="navbar">
-        <div class="titlelogo">
+    <header class="header-section"> 
+      <nav class="nav-bar">
+        <div class="title-logo">
           <img class="logo" src="logo.svg">
           <h1 class = "main-heading"> The Good News Co </h1>
         </div>
@@ -34,12 +34,12 @@
 
     <section class="big-news">
       <section class="main-image">  
-      <img src="Lostdog.jpg" />
+      <img src="lost-dog.jpg" alt="dog"/>
     </section>
       <section class="big-news-text">
         <h2 class = "big-news-heading"> DOG BACK HOME AFTER 1 YEAR </h2>
         <h4 class = "big-news-subheading"> we love stories with happy endings!!</h4>
-        <p class="big-news-p">
+        <p class="big-news-paragraph">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -58,23 +58,23 @@
   <!-- NEWS SCROLL SECTION  -->
 
     <section class="news-scroll">
-          <div class="news-card">
-            <img src="pomegranate.jpg" />
+      <div class="news-card">
+        <img src="pomegranate.jpg" alt="pomegranate" />
         <p>Pomegranate is the BEST thing</p>       
       </div>
       <div class="news-card">
-        <img src="apple.jpg" />
+        <img src="apple.jpg" alt="apple"/>
         <p>5 things you didn't know about apples</p>
       </div>
       <div class="news-card">
-        <img src="pills.jpg" />
+        <img src="pills.jpg" alt="pills"/>
         <p>Curious about alternative medicine?</p>
       </div>
       <div class="news-card">
-        <img src="strawberries.jpg" />
+        <img src="strawberries.jpg" alt="strawberries"/>
         <p>The 10 most nutritious summer foods</p>
       </div>
     </section>
-    <footer class="footer"><strong> &copy; Good News Co 2021 </strong></footer>
+    <footer class="footer">&copy; Good News Co 2021</footer>
   </body>
 </html>
