--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+  <header>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Gossip</a>
+      <a href="#about">Sport</a>
+    </div>
+  </header>
+
+  <div class="news-container">
     <section class="big-news">
-      <!-- The big news content -->
+      <img class="big-news-pic" src="./assets/bignews.png" alt="BIG NEWS">
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news">
+        <img class="box1" src="./assets/box1.png" alt="BIG NEWS">
+        <img class="box1" src="./assets/box2.jpg" alt="BIG NEWS">
+        <img class="box1" src="./assets/box3.jpg" alt="BIG NEWS">
+        <img class="box1" src="./assets/box4.png" alt="BIG NEWS">
+        <img class="box1" src="./assets/box5.jpg" alt="BIG NEWS">
+        <img class="box1" src="./assets/box6.jpeg" alt="BIG NEWS">
+        <img class="box1" src="./assets/box7.jpg" alt="BIG NEWS">
     </section>
-  </body>
+</div>
+
+</body>
+
 </html>
