CHANGES REQUESTED made

--- a/code/index.html
+++ b/code/index.html
@@ -46,22 +46,28 @@
       <img src="images/photo.jpg" alt="man-with-camera">
       <h2>Winners of 2020's Travel Photo of the Year Awards</h2>
     </div>
-    <div class="news-card"><img src="images/airport.jpg" alt="airport">
+    <div class="news-card">
+      <img src="images/airport.jpg" alt="airport">
       <h2>'I've Missed My Flight!' Here's what To Do</h2>
     </div>
-    <div class="news-card"><img src="images/freedom.jpg" alt="two-girls">
+    <div class="news-card">
+      <img src="images/freedom.jpg" alt="two-girls">
       <h2>The Reality of the American Dream by travel blogger Kelly Clark</h2>
     </div>
-    <div class="news-card"><img src="images/mountains.jpg" alt="girl-and-mountains">
+    <div class="news-card">
+      <img src="images/mountains.jpg" alt="girl-and-mountains">
       <h2>The 12 most beautiful mountains in the world</h2>
     </div>
-    <div class="news-card"><img src="images/plane.jpg" alt="plane">
+    <div class="news-card">
+      <img src="images/plane.jpg" alt="plane">
       <h2>How to Book the Cheapest Flight Possible to Anywhere</h2>
     </div>
-    <div class="news-card"><img src="images/boys.jpg" alt="two-boys">
+    <div class="news-card">
+      <img src="images/boys.jpg" alt="two-boys">
       <h2>The improbable rise and fall of Couchsurfing</h2>
     </div>
-    <div class="news-card"><img src="images/santorini.jpg" alt="santorini">
+    <div class="news-card">
+      <img src="images/santorini.jpg" alt="santorini">
       <h2>Greece Travel Info & Tips: All you need to know</h2>
     </div>
   </section>
