Did some changes from code review

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <title> Project 2: The News site</title>
+  <title> Hiking Magazine</title>
 </head>
 
 <body>
@@ -21,18 +21,12 @@
       <img class="foot-step" src="./assets/foot-steps.png" width="60px">      
     </div>
     <nav class="navigation-container">
-      <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">About us</a>
-      </div>
-      <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">Contact us</a>
-      </div>
-      <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">Inspiration</a>
-      </div>
-      <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">FAQ</a>
-      </div>
+      <div class="navigation-item"></div>
+        <a class="nav-link" href="https://google.com">About us</a>       
+        <a class="nav-link" href="https://google.com">Contact us</a>      
+        <a class="nav-link" href="https://google.com">Inspiration</a>      
+        <a class="nav-link" href="https://google.com">FAQ</a>  
+      </div>        
     </nav>
   </header>
 
@@ -42,7 +36,7 @@
       <p class="text-on-photo-big">#ALBANIA</p>
       </div>
     <div class="big-news-text">
-      <h3>Next Trip</h3><br>
+      <h3>Next Trip</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
