--- a/code/index.html
+++ b/code/index.html
@@ -1,150 +1,157 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Arctic News by Ekaterina Klimenko</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  </head>
-  <body>
-    
-    <header class="header-general">
-      <!-- Header phone: hamburger menu and dropdown navbar -->
-      <div class="header-phone">
-          <img src="./Arctic-Logo.png" class="logo" alt="Arctic News">
-          <div class="checkbox">
-            <input type="checkbox" id="hamburger">
-              <nav class="dropdown">
-                <ul class="dropdown-list">
-                    <li><a href="" class="nav-link">Home</a></li>
-                    <li><a href="" class="nav-link">Highlights</a></li>
-                    <li><a href="" class="nav-link">News</a></li>
-                    <li><a href="" class="nav-link">More</a></li>
-                </ul>
-              </nav>
-            <label class="label" for="hamburger">
-              <div class="hamburger-line"></div>
-              <div class="hamburger-line"></div>
-              <div class="hamburger-line"></div>
-            </label>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <title>Arctic News by Ekaterina Klimenko</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+</head>
+
+<body>
+
+  <header class="header-general">
+    <!-- Header phone: hamburger menu and dropdown navbar -->
+    <div class="header-phone">
+      <div class="logo-wrapper">
+        <img src="./Arctic-Logo.png" class="logo" alt="Arctic News">
       </div>
-      <!-- Header tablet: logo in the middle, navbar on the sides-->
-      <div class="header-tablet">
-        <nav class="nav-tablet">
-          <a href="" class="nav-link">Home</a>
-          <a href="" class="nav-link">Highlights</a>
-          <img src="./Arctic-Logo.png" class="logo" alt="Logo">
-          <a href="" class="nav-link">News</a>
-          <a href="" class="nav-link">More</a> 
-        </nav>
+      <nav class="nav-desktop-tablet">
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">Highlights</a>
+        <a href="#" class="nav-link">News</a>
+        <a href="#" class="nav-link">More</a>
+      </nav>
+      <div class="checkbox">
+        <input type="checkbox" id="hamburger">
+        <div class="dropdown">
+          <ul class="dropdown-list">
+            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">Highlights</a></li>
+            <li><a href="#" class="nav-link">News</a></li>
+            <li><a href="#" class="nav-link">More</a></li>
+          </ul>
+        </div>
+        <label class="label" for="hamburger">
+          <div class="hamburger-line"></div>
+          <div class="hamburger-line"></div>
+          <div class="hamburger-line"></div>
+        </label>
       </div>
-      <!-- Header desktop: logo on the left, navbar on the right-->
-      <div class= "header-desktop">
-          <img src="./Arctic-Logo.png" class="logo" alt="Logo">
-          <nav class="nav-desktop">
-            <a href="" class="nav-link">Home</a> |
-            <a href="" class="nav-link">Highlights</a> |
-            <a href="" class="nav-link">News</a> |
-            <a href="" class="nav-link">More</a> |
-          </nav>
+    </div>
+  </header>
+  <!--Big news section-->
+  <section class="big-news">
+    <div class="container">
+      <img class="bignews-image" src="./melting_arctic.jpg" alt="Image decription">
+      <div class="bignews-text">
+        <h2 class="bignews-headline">2020: The hottest year in the Arctic </h2>
+        <p class="bignews-para1">
+          Temperatures in the Arctic Circle hit an all-time record in June 2020. The Arctic is
+          warming up faster than any other region in the world.
+        </p>
+        <p class="bignews-para2">
+          Since the mid-1980s, the Arctic has warmed at least twice as fast as the global
+          average, reinforcing a long downward trend in summer Arctic sea ice extent which has repercussions on the
+          climate in mid-latitude regions.
+        </p>
+        <p class="bignews-para2">
+          Arctic sea-ice reached its annual minimum in September, as the second lowest in the
+          42-year-old satellite record. Arctic sea ice for July and October 2020 was the lowest on record. Sea-ice in
+          the Laptev Sea has been exceptionally low through the spring, summer and autumn, and the Northern Sea Route
+          was ice-free or close to ice free from July to October 2020.
+        </p>
+        <a class="read-more" href="#">Read more</a>
       </div>
-    </header>
-    <!--Big news section-->
-      <section class="big-news">
-        <div class="container">
-          <img class="bignews-image" src="./melting_arctic.jpg" alt="Image decription">
-          <div class="bignews-text">
-          <h2 class="bignews-headline">2020: The hottest year in the Arctic </h2>
-          <p class="bignews-para1">Temperatures in the Arctic Circle hit an all-time record in June 2020. The Arctic is warming up faster than any other region in the world.</p>
-          <p class="bignews-para2">Since the mid-1980s, the Arctic has warmed at least twice as fast as the global average, reinforcing a long downward trend in summer Arctic sea ice extent which has repercussions on the climate in mid-latitude regions.
+    </div>
+  </section>
+  <!--Highlights section-->
+  <section class="highlights-section">
+    <div class="container">
+      <h1 class="big-headline">Trending now</h1>
+      <div class="grid-container">
+        <a href="" class="each-highlight highlight1">
+          <h3 class="highlight-headline">Climate adaptation and reindeer husbandry</h3>
+          <p class="highlight-credits">
+            Photo by Lynn Smith from Pexels
           </p>
-          <p class="bignews-para2">Arctic sea-ice reached its annual minimum in September, as the second lowest in the 42-year-old satellite record. Arctic sea ice for July and October 2020 was the lowest on record. Sea-ice in the Laptev Sea has been exceptionally low through the spring, summer and autumn, and the Northern Sea Route was ice-free or close to ice free from July to October 2020.
+        </a>
+        <a href="" class="each-highlight highlight2">
+          <h3 class="highlight-headline">Biodiversity is rapidly decreasing due to loss of Arctic habitat</h3>
+          <p class="highlight-credits">
+            Photo by Photo by Jonatan Pie from Pexels
           </p>
-          <a class="read-more" href="">Read more</a>
-          </div>
-        </div>
-      </section>
-    <!--Highlights section-->
-      <section class="highlights-section">
-        <div class="container">
-          <h1 class="big-headline">Trending now</h1>
-          <div class="grid-container">
-            <a href="" class="each-highlight highlight1"> 
-              <h3 class="highlight-headline">Climate adaptation and reindeer husbandry</h3>
-              <p class="highlight-credits">Photo by Lynn Smith from Pexels</p>
-            </a>
-            <a href="" class="each-highlight highlight2">
-              <h3 class="highlight-headline">Biodiversity is rapidly decreasing due to loss of Arctic habitat</h3>
-              <p class="highlight-credits">Photo by Photo by Jonatan Pie from Pexels</p>
-            </a>
-            <a href="" class="each-highlight highlight3">
-              <h3 class="highlight-headline">Microplastics remain serios threat to Arctic environment</h3>
-              <p class="highlight-credits">Photo by Brian Yurasits on Unsplash</p>
-            </a>
-            <a href="" class="each-highlight highlight4">
-              <h3 class="highlight-headline">Oil and gas industry looks at opportinties in the Arctic</h3>
-              <p class="highlight-credits">Photo by Ksenia Kudelkina on Unsplash</p>
-            </a>
+        </a>
+        <a href="" class="each-highlight highlight3">
+          <h3 class="highlight-headline">Microplastics remain serios threat to Arctic environment</h3>
+          <p class="highlight-credits">
+            Photo by Brian Yurasits on Unsplash
+          </p>
+        </a>
+        <a href="" class="each-highlight highlight4">
+          <h3 class="highlight-headline">Oil and gas industry looks at opportinties in the Arctic</h3>
+          <p class="highlight-credits">
+            Photo by Ksenia Kudelkina on Unsplash
+          </p>
+        </a>
 
-          </div>
-        </div>
-      </section>
-    <!-- The other news section -->
-      <section class="ordinary-news"> 
-        <div class="container">
-          <h1 class="big-headline">News</h1>
-          <div class="news">
-            <a href="" class="each-news">
-              <img src="./arctic_city.jpg" class="ordinarynews-image" alt="Arctic city">
-              <h3 class="ordinarynews-headline">Climate change severely affects Arctic communities</h3>
-            </a>
-            <a href="" class="each-news">
-              <img src="./arctic_shipping.jpg" class="ordinarynews-image" alt="Icebreaker">
-              <h3 class="ordinarynews-headline">As the ice melts the shipping in the Arctic gets momentum</h3> 
-            </a>
-            <a href="" class="each-news">
-              <img src="./northern_lights.jpg" class="ordinarynews-image" alt="Northern lights">
-              <h3 class="ordinarynews-headline">Arctic tourism hindered by COVID-19: is it good or bad?</h3>      
-            </a>
-            <a href="" class="each-news">
-              <img src="./polar_bears.jpg" class="ordinarynews-image" alt="Polar Bears">
-              <h3 class="ordinarynews-headline">Polar bears could be lost by 2100, study predicts</h3>  
-            </a>
-          </div>
-        </div>
-      </section>
-    
-    <!-- Footer -->
-    <footer>
+      </div>
+    </div>
+  </section>
+  <!-- The other news section -->
+  <section class="ordinary-news">
+    <div class="container">
+      <h1 class="big-headline">News</h1>
+      <div class="news">
+        <a href="#" class="each-news">
+          <img src="./arctic_city.jpg" class="ordinarynews-image" alt="Arctic city">
+          <h3 class="ordinarynews-headline">Climate change severely affects Arctic communities</h3>
+        </a>
+        <a href="#" class="each-news">
+          <img src="./arctic_shipping.jpg" class="ordinarynews-image" alt="Icebreaker">
+          <h3 class="ordinarynews-headline">As the ice melts the shipping in the Arctic gets momentum</h3>
+        </a>
+        <a href="#" class="each-news">
+          <img src="./northern_lights.jpg" class="ordinarynews-image" alt="Northern lights">
+          <h3 class="ordinarynews-headline">Arctic tourism hindered by COVID-19: is it good or bad?</h3>
+        </a>
+        <a href="#" class="each-news">
+          <img src="./polar_bears.jpg" class="ordinarynews-image" alt="Polar Bears">
+          <h3 class="ordinarynews-headline">Polar bears could be lost by 2100, study predicts</h3>
+        </a>
+      </div>
+    </div>
+  </section>
 
-      <div class="footer-general">
-        <!-- Footer links and social media -->
-        <div class="footer-column">
-          <img src="./Arctic-Logo.png" class="logo-footer" alt="Logo">
-          <div class="somedia-buttons">
-            <a href="" class="fa fa-facebook"></a>
-            <a href="" class="fa fa-twitter"></a>
-            <a href="" class="fa fa-linkedin"></a>
-            <a href="" class="fa fa-instagram"></a>
-          </div>
-          <a class="subscribe-button">Subscribe to our newsletter</a>
-        </div> 
-        <!-- Footer About Us -->
-        <div class="footer-column">
-          <h4 class="footer-headline">About us</h4>
-          <div class="footer-list">
-            <a class="footer-link" href="">Contact information</a>
-            <a class="footer-link" href="">History</a>
-            <a class="footer-link" href="">Privacy Policy</a>
-            <a class="footer-link" href="">Coockies</a>
-          </div>
+  <!-- Footer -->
+  <footer>
+    <div class="footer-general">
+      <!-- Footer links and social media -->
+      <div class="footer-column">
+        <img src="./Arctic-Logo.png" class="logo-footer" alt="Logo">
+        <div class="somedia-buttons">
+          <a href="" class="fa fa-facebook"></a>
+          <a href="" class="fa fa-twitter"></a>
+          <a href="" class="fa fa-linkedin"></a>
+          <a href="" class="fa fa-instagram"></a>
         </div>
-        <!-- Footer Explore Arctic News -->
-        <div class="footer-column">
+        <a class="subscribe-button">Subscribe to our newsletter</a>
+      </div>
+      <!-- Footer About Us -->
+      <div class="footer-column">
+        <h4 class="footer-headline">About us</h4>
+        <div class="footer-list">
+          <a class="footer-link" href="">Contact information</a>
+          <a class="footer-link" href="">History</a>
+          <a class="footer-link" href="">Privacy Policy</a>
+          <a class="footer-link" href="">Coockies</a>
+        </div>
+      </div>
+      <!-- Footer Explore Arctic News -->
+      <div class="footer-column">
         <h4 class="footer-headline">Explore Arctic News</h4>
         <div class="footer-list">
           <a class="footer-link" href="">Arctic shipping</a>
@@ -152,13 +159,13 @@
           <a class="footer-link" href="">Oil and Gas</a>
           <a class="footer-link" href="">Climate and environment</a>
         </div>
-        </div>
       </div>
-      <!-- Footer copyright section -->
-      <div class="footer-copyright">
-        <p class="copyright-text">&#169 2021 "Arctic News" by Ekaterina Klimenko made for Technigo Bootcamp</p>
-      </div>
-    </footer>
+    </div>
+    <!-- Footer copyright section -->
+    <div class="footer-copyright">
+      <p class="copyright-text">&#169 2021 "Arctic News" by Ekaterina Klimenko made for Technigo Bootcamp</p>
+    </div>
+  </footer>
+</body>
 
-  </body>
 </html>
