indentation and further changes requested in pull request

--- a/code/previous_artists/cleo.html
+++ b/code/previous_artists/cleo.html
@@ -14,19 +14,23 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../index.html">Home</a></div>
-        <div>Concerts</div>
-        <div>Events</div>
-        <div>About</div>
+        <a href="../index.html">Home</a>
+        <a>Concerts</a>
+        <a>Events</a>
+        <a>About</a>
       </nav>
     </header>
 
-<img class="img-artistcards" src ="../images/cleo.jpg" alt="Cleo Sol">
-<h4>Cleo Sol</h4>
-<p class="author">by Noemi, 01.01.2021</p>
-<p class="text-artist">20 year old Cleo Sol was born to musical parents who met in a Jazz band. Her Mum, half Serbian and Spanish, is a singer and plays 
-the guitar and flute. Cleo’s Jamaican Dad plays the bass and piano. Cleo quickly became the singer in the family, jostling for attention 
-amongst seven other siblings, she received a second hand karaoke player from her mum which gave her a platform to display her early 
-talents to her musical family.</p>
-</body>
+    <img class="img-artist-cards" src ="../images/cleo.jpg" alt="Cleo Sol">
+    <h4>Cleo Sol</h4>
+      <p class="author">
+        by Noemi, 01.01.2021
+      </p>
+      <p class="text-artist">
+        20 year old Cleo Sol was born to musical parents who met in a Jazz band. Her Mum, half Serbian and Spanish, is a singer and plays 
+        the guitar and flute. Cleo’s Jamaican Dad plays the bass and piano. Cleo quickly became the singer in the family, jostling for attention 
+        amongst seven other siblings, she received a second hand karaoke player from her mum which gave her a platform to display her early 
+        talents to her musical family.
+      </p>
+  </body>
 </html>
