--- a/code/previous_artists/foxwarren.html
+++ b/code/previous_artists/foxwarren.html
@@ -14,22 +14,26 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../index.html">Home</a></div>
-        <div>Concerts</div>
-        <div>Events</div>
-        <div>About</div>
+        <a href="../index.html">Home</a>
+        <a>Concerts</a>
+        <a>Events</a>
+        <a>About</a>
       </nav>
     </header>
 
-<img class="img-artistcards" src ="../images/foxwarren.jpg" alt="Foxwarren">
-<h4>Foxwarren</h4>
-<p class="author">by Noemi, 01.01.2021</p>
-<p class="text-artist">Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
-friends originally formed more than a decade ago. Growing up in scattered small towns across the Canadian prairies, Andy Shauf 
-(guitars/keys/vocals), Dallas Bryson (guitar/vocals), and brothers Darryl Kissick (bass) and Avery Kissick (drums & percussion) 
-eventually found themselves in Regina, Saskatchewan. The initial sessions for their self-titled debut began in the Kissicks’ 
-parents’ farmhouse while they were away on vacation. Upon their return, Foxwarren were forced to relocate and recording resumed 
-back in Regina in a rented house where the members lived as roommates. The band's name comes from the Kissick brothers’ family 
-home in Foxwarren, Manitoba.</p>
-</body>
+    <img class="img-artist-cards" src ="../images/foxwarren.jpg" alt="Foxwarren">
+    <h4>Foxwarren</h4>
+      <p class="author">
+        by Noemi, 01.01.2021
+      </p>
+      <p class="text-artist">
+        Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
+        friends originally formed more than a decade ago. Growing up in scattered small towns across the Canadian prairies, Andy Shauf 
+        (guitars/keys/vocals), Dallas Bryson (guitar/vocals), and brothers Darryl Kissick (bass) and Avery Kissick (drums & percussion) 
+        eventually found themselves in Regina, Saskatchewan. The initial sessions for their self-titled debut began in the Kissicks’ 
+        parents’ farmhouse while they were away on vacation. Upon their return, Foxwarren were forced to relocate and recording resumed 
+        back in Regina in a rented house where the members lived as roommates. The band's name comes from the Kissick brothers’ family 
+        home in Foxwarren, Manitoba.
+      </p>
+  </body>
 </html>
