--- a/code/previous_artists/arlo.html
+++ b/code/previous_artists/arlo.html
@@ -14,19 +14,22 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../index.html">Home</a></div>
-        <div>Concerts</div>
-        <div>Events</div>
-        <div>About</div>
+        <a href="../index.html">Home</a>
+        <a>Concerts</a>
+        <a>Events</a>
+        <a>About</a>
       </nav>
     </header>
 
-<img class="img-artistcards" src ="../images/arlo.jpg" alt="Arlo Parks">
-<h4>Arlo Parks</h4>
-<p class="author">by Noemi, 01.01.2021</p>
-    <p class="text-artist">Arlo Parks is a 20 year old poet/singer from London. In her words she spent most of school feeling like that black kid who couldn't 
-    dance for shit, listening to too much emo music and crushing on some girl in her Spanish class. Her songs are confessional and tender, 
-    mainly inspired by Portishead and Earl Sweatshirt. </p>
-
-</body>
+    <img class="img-artist-cards" src ="../images/arlo.jpg" alt="Arlo Parks">
+    <h4>Arlo Parks</h4>
+      <p class="author">
+        by Noemi, 01.01.2021
+      </p>
+      <p class="text-artist">
+        Arlo Parks is a 20 year old poet/singer from London. In her words she spent most of school feeling like that black kid who couldn't 
+        dance for shit, listening to too much emo music and crushing on some girl in her Spanish class. Her songs are confessional and tender, 
+        mainly inspired by Portishead and Earl Sweatshirt. 
+      </p>
+  </body>
 </html>
