--- a/code/previous_artists/barney.html
+++ b/code/previous_artists/barney.html
@@ -14,22 +14,25 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../index.html">Home</a></div>
-        <div>Concerts</div>
-        <div>Events</div>
-        <div>About</div>
+        <a href="../index.html">Home</a>
+        <a>Concerts</a>
+        <a>Events</a>
+        <a>About</a>
       </nav>
     </header>
 
-<img class="img-artistcards" src ="../images/barney.jpg" alt="Barney Artist">  
-<h4>Barney Artist</h4>
-<p class="author">by Noemi, 01.01.2021</p>
-<p class="text-artist">Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. The 26-year-old east Londoner fuses 90s era boom bap hip-hop with jazz for a refreshing 
-    sound harkening back to legends such as A Tribe Called Quest and The Roots, and taking influence from prolific UK artists including Kano and Ghostpoet. His sprawling content, 
-    consisting of love, loss and religion, is incredibly see through and relatable, as he guides the listener through his multifaceted life. Set to release his debut album later 
-    this year, the follow up to 2014 mixtape Bespoke and 2016’s Painting Sounds, he is laying down yet more bricks of his life, mapping out an overall journey of self-discovery and growth. 
-    “I’m really proud of this album,” Barney says, “because I know that’s what I stand for and how I want people to feel about what I say, and now I have a platform to say it. 
-    The ability to be able to do that is important.”
-
-</body>
+    <img class="img-artist-cards" src ="../images/barney.jpg" alt="Barney Artist">  
+    <h4>Barney Artist</h4>
+      <p class="author">
+        by Noemi, 01.01.2021
+      </p>
+      <p class="text-artist">
+        Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. The 26-year-old east Londoner fuses 90s era boom bap hip-hop with jazz for a refreshing 
+        sound harkening back to legends such as A Tribe Called Quest and The Roots, and taking influence from prolific UK artists including Kano and Ghostpoet. His sprawling content, 
+        consisting of love, loss and religion, is incredibly see through and relatable, as he guides the listener through his multifaceted life. Set to release his debut album later 
+        this year, the follow up to 2014 mixtape Bespoke and 2016’s Painting Sounds, he is laying down yet more bricks of his life, mapping out an overall journey of self-discovery and growth. 
+        “I’m really proud of this album,” Barney says, “because I know that’s what I stand for and how I want people to feel about what I say, and now I have a platform to say it. 
+        The ability to be able to do that is important.”
+      </p>
+  </body>
 </html>
