--- a/code/previous_artists/joy.html
+++ b/code/previous_artists/joy.html
@@ -14,19 +14,23 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../index.html">Home</a></div>
-        <div>Concerts</div>
-        <div>Events</div>
-        <div>About</div>
+        <a href="../index.html">Home</a>
+        <a>Concerts</a>
+        <a>Events</a>
+        <a>About</a>
       </nav>
     </header>
 
-<img class="img-artistcards" src ="../images/joy.jpg" alt="Joy Crookes">
-<h4>Joy Crookes</h4>
-<p class="author">by Noemi, 01.01.2021</p>
-<p class="text-artist">Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. Half-Bengali/Half-Irish in heritage; 
+    <img class="img-artist-cards" src ="../images/joy.jpg" alt="Joy Crookes">
+    <h4>Joy Crookes</h4>
+      <p class="author">
+        by Noemi, 01.01.2021
+      </p>
+      <p class="text-artist">
+        Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. Half-Bengali/Half-Irish in heritage; 
         Joy’s is a dexterous sound, which effortlessly showcases her melting pot of sonic influences. Joy balances the retro stylings of 
         Sade with the millennial wit of Lily Allen – songs that aren’t afraid to be honest and raw, while also packing a political punch. 
-        She may be looking to the past, but smart, talented and strong, she is shaping the sound of the future.</p>
-</body>
+        She may be looking to the past, but smart, talented and strong, she is shaping the sound of the future.
+      </p>
+  </body>
 </html>
