--- a/code/previous_artists/loyle.html
+++ b/code/previous_artists/loyle.html
@@ -14,20 +14,24 @@
     <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
       <nav>
-        <div><a href="../index.html">Home</a></div>
-        <div>Concerts</div>
-        <div>Events</div>
-        <div>About</div>
+        <a href="../index.html">Home</a>
+        <a>Concerts</a>
+        <a>Events</a>
+        <a>About</a>
       </nav>
     </header>
 
-<img class="img-artistcards" src ="../images/loyle.jpg" alt="Loyle Carner">
-<h4>Loyle Carner</h4>
-<p class="author">by Noemi, 01.01.2021</p>
-<p class="text-artist">Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.
-    “It’s no secret Madlib is my musical hero,” Carner said in a statement. “I wrote this almost 2 years ago, but at first had trouble with clearing the sample and 
-    thought it would never see the light of day. It’s really just about what it is to be black and white, in a world where you pretty much have to be one or the other. 
-    It hurts the way I felt about my race back then, is the same way I feel now. Nothing has changed since my last entry, nothing has changed since the last century. 
-    I hope that soon this song is nothing more than a reminder of a different time, and collectively we’re able to move forward to a time of more respect, acceptance and understanding.”</p>
-</body>
+    <img class="img-artist-cards" src ="../images/loyle.jpg" alt="Loyle Carner">
+    <h4>Loyle Carner</h4>
+      <p class="author">
+        by Noemi, 01.01.2021
+      </p>
+      <p class="text-artist">
+        Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.
+        “It’s no secret Madlib is my musical hero,” Carner said in a statement. “I wrote this almost 2 years ago, but at first had trouble with clearing the sample and 
+        thought it would never see the light of day. It’s really just about what it is to be black and white, in a world where you pretty much have to be one or the other. 
+        It hurts the way I felt about my race back then, is the same way I feel now. Nothing has changed since my last entry, nothing has changed since the last century. 
+        I hope that soon this song is nothing more than a reminder of a different time, and collectively we’re able to move forward to a time of more respect, acceptance and understanding.”
+      </p>
+  </body>
 </html>
