--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
+    <title>Happy news site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
@@ -20,15 +20,15 @@
     </header>
       
     <!-- The big news content -->
-    <section class="big-news-container">
-      <article>
-       <h2 class="big-news-title">Politics</h2>
+    <section class="big-news-container" >
+      <article >
+        <h2 class="big-news-title">Politics</h2>
         <div class="big-news-items">
-        <div class="img-big-news">
-          <img src="./USA.jpg" alt="Bild på en stor nyhet" width="500px">
+          <div class="img-big-news">
+            <img src="./USA.jpg" alt="Bild på en stor nyhet" width="500px">
+          </div>
+          <p class="big-news-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
-        <p class="big-news-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      </div>
       </article>
     </section>
 
