deleted Marquee element

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
      
     <header>
       <div class="banner">
-        <marquee behavior="alternate" direction="left"><a href="#">Sign up for more beaty & fashion news</a></marquee>
+        <a href="#">Sign up for more beaty & fashion news</a>
       </div> 
   
       <section class="navigation-bar">
