--- a/today.html
+++ b/today.html
@@ -2,19 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>HasseNytt</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styleToday.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./style.css"/>
   </head>
 
   <body>
-
     <header>
       <div class="logos">
         <div class="logo">
-          <img src="hassenyttlogo.png" alt="HasseNytt logo">
+          <img src="hassenyttlogo.png" alt="HasseNytt logo"/>
         </div>
         <h1>Everything new about Hasse</h1>
       </div>
@@ -26,42 +25,26 @@
         </div>
         <a href="archive.html">Archive</a> |
         <a href="gallery.html">Gallery</a> |
-        <a href="https://www.facebook.com/HanzMyhr">Facebook</a> |
-        <a href="https://www.youtube.com/channel/UCfrosjPj34T0EZ3NCj_sj4Q">Youtube</a> |
-        <a href="https://instagram.com/sir.hanz.myhr?igshid=1dcl0a0r2au38">Instagram</a>
-      </nav>
-
-      <nav class="ipad-screen-nav">
-        <a href="index.html">Home</a> |
-        <div class="active">
-          <a href="today.html">Today</a> 
-        </div>
-        <a href="archive.html">Archive</a> |
-        <a href="gallery.html">Gallery</a> 
-      </nav>
-
-      <nav class="mobile-screen-nav">
-        <a href="index.html">Home</a> |
-        <a class="active-mobile" href="today.html">Today</a> |
-        <a href="archive.html">Archive</a> |
-        <a href="gallery.html">Gallery</a> 
+        <a class="social-media-nav" href="https://www.facebook.com/HanzMyhr">Facebook</a> |
+        <a class="social-media-nav" href="https://www.youtube.com/channel/UCfrosjPj34T0EZ3NCj_sj4Q">Youtube</a> |
+        <a class="social-media-nav" href="https://instagram.com/sir.hanz.myhr?igshid=1dcl0a0r2au38">Instagram</a>
       </nav>
 
       <section class="small-cards">
         <div class="card">
-          <img src="hasse_and_rocky.jpg" alt="Hasses and Rocky">
+          <img src="hasse_and_rocky.jpg" alt="Hasses and Rocky"/>
           <h3>Hasse and Rocky collabs</h3>
         </div> 
         <div class="card">
-          <img src="hasse_exploring.jpg" alt="Hasse with exploring equipment">
+          <img src="hasse_exploring.jpg" alt="Hasse with exploring equipment"/>
           <h3>New caves have been found</h3>
         </div>
         <div class="card">
-          <img src="hasse_movie.jpg" alt="Hasse stars in a new movie">
+          <img src="hasse_movie.jpg" alt="Hasse stars in a new movie"/>
           <h3>Hasse stars in a new movie</h3>
         </div>
         <div class="card">
-          <img src="hasse_not_positive.jpg" alt="Hasse outside the hospital">
+          <img src="hasse_not_positive.jpg" alt="Hasse outside the hospital"/>
           <h3>Hasse tested negative for COVID-19</h3>
         </div>
       </section>
@@ -69,7 +52,7 @@
 
     <section class="big-news">
       <div class="main">
-        <img class="big-image" src="hasse_mormon.jpg" alt="Hasse in A book of Mormon">
+        <img class="big-image" src="hasse_mormon.jpg" alt="Hasse in A book of Mormon"/>
         <div class="text">
           <h2>A New Star In The Book Of Mormon</h2>
           <p>NORRKÖPING - Hasse have just accepted a lead role in the award-winning musical "A Book of Mormon"
@@ -84,11 +67,10 @@
 
     <footer>
       <div class="social-media">
-        <img class="icon" src="fb-white-logo.png" alt="Facebook white logo">
-        <img class="icon" src="insta-white-logo.png" alt="Instagram white logo">
-        <img class="icon" src="yt-white-logo.png" alt="Youtube white logo">
+        <img class="icon" src="fb-white-logo.png" alt="Facebook white logo"/>
+        <img class="icon" src="insta-white-logo.png" alt="Instagram white logo"/>
+        <img class="icon" src="yt-white-logo.png" alt="Youtube white logo"/>
       </div>
     </footer>
-
   </body>
 </html>
