added a forward slash on the img self-closing tags

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
   <body>
     
     <header class="header container">
-      <img class="logo" src="logo-thefiveamstory-210120.png"/>
+      <img class="logo" src="logo-thefiveamstory-210120.png" />
       <nav class="navigation">
         <a class="navigation-item" href="#">Poems</a>
         <a class="navigation-item" href="#">About</a>
@@ -20,7 +20,7 @@
     
     <section class="welcome-news welcome-container">
       <article class="welcome-card">
-        <img class="welcome-image" src="welcome-image.jpg" alt="Childs drawing of a tree">
+        <img class="welcome-image" src="welcome-image.jpg" alt="Childs drawing of a tree"/>
         <div class="welcome-text">
           <h1>The Five AM Story Features - Wordpoems</h1>
           <p class="tagline">- one poem each day for a hundred days to remain sane</p>
@@ -39,7 +39,7 @@
 
     <section class="poem-news container"> 
       <article class="poem-card animated-shadow">
-        <img class="poem-image" src="poem-image-1.png" alt="A poem written in code">
+        <img class="poem-image" src="poem-image-1.png" alt="A poem written in code" />
         <div class="poem-text">
             <h2>A poem of code</h2>
             <p>August 15, 2018 – Nonchalant – having an air of easy unconcern</p>
@@ -48,7 +48,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-2.jpg" alt="Cow with twin-calves">
+        <img class="poem-image" src="poem-image-2.jpg" alt="Cow with twin-calves" />
         <div class="poem-text">
             <h2>Tincture of dawn</h2>
             <p>January 30, 2018 – Tincture – a medicinal substance or a trace or tint</p>
@@ -57,7 +57,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-3.jpg" alt="Red flower with scorched leaves">
+        <img class="poem-image" src="poem-image-3.jpg" alt="Red flower with scorched leaves" />
         <div class="poem-text">
             <h2>Early stages of burnout</h2>
             <p>February 12, 2018 – Adust – scorched or burned</p>
@@ -66,7 +66,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-4.jpg" alt="Lego Santa">
+        <img class="poem-image" src="poem-image-4.jpg" alt="Lego Santa" />
         <div class="poem-text">
             <h2>Thoughts of Kiruna</h2>
             <p>December 24, 2017 – Nativity – the process of being born</p>
@@ -75,7 +75,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-5.jpg" alt="Cookie made of textiles">
+        <img class="poem-image" src="poem-image-5.jpg" alt="Cookie made of textiles" />
         <div class="poem-text">
             <h2>Ad hoc Sonnet</h2>
             <p>February 25, 2018 – Ad hoc – formed or used for a special purpose</p>
@@ -84,7 +84,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-6.jpg" alt="Himalayan Popinjay painting">
+        <img class="poem-image" src="poem-image-6.jpg" alt="Himalayan Popinjay painting" />
         <div class="poem-text">
             <h2>Far away from being a popinjay</h2>
             <p>January 28, 2018 – Popinjay – a strutting supercilious person</p>
@@ -93,7 +93,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-7.jpg" alt="Icy shoreline">
+        <img class="poem-image" src="poem-image-7.jpg" alt="Icy shoreline" />
         <div class="poem-text">
             <h2>Awareness</h2>
             <p>March 03, 2018 – Nondescript – dull, drab, or not easily described</p>
@@ -102,7 +102,7 @@
       </article> 
 
       <article class="poem-card">
-        <img class="poem-image" src="poem-image-8.jpg" alt="Crumpled paper">
+        <img class="poem-image" src="poem-image-8.jpg" alt="Crumpled paper" />
         <div class="poem-text">
             <h2>Being your own worst critic?</h2>
             <p>February 27, 2018 – Tenebrous – dark, murky, or obscure</p>
