added imgs and code from duplicated folder

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>News about Trap Queens</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
-  <body>
+   <body>
+ 
+  <!-- HEADER -->
+  
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <img src="images/Queens.png" alt="trap queens title">
+      <nav>
+        <a href="#">HOME</a>
+        <a href="#">NEWS</a>
+        <a href="#">ABOUT</a>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+     <!-- BIG NEWS -->
+
+    <section class="big-news-container">
+      <section class="container">
+        <img src="images/woman-in-fur-under-neon.jpg" alt="big news">
+        <div>
+          <h2>Smashing news!</h2>
+          <p>
+          What has Tina Trapper been up to? 
+          Find out everything about it. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quo nihil voluptatem fuga et obcaecati rerum repellat enim repudiandae, vitae numquam
+          Consequuntur et minus esse reiciendis vero quia cumque molestiae?
+         </p>
+        </div>
+      </section>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
-</html>
+    <h3>What's hot? find it out here!</h3>
+
+     <!-- OTHER NEWS -->
+  <section class="news-container">
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>FELICIA TRAPMUCH</h4>
+    <img src="images/pexels-charles-nunes-4329752.jpg" alt="Felicia Trapmuch pic">
+    <p>Amazing reception of her first album track</p>
+    <p>Find out more here</p>
+   </div>
+  
+  
+   <div class="news-item">
+    <p>All about</p>
+    <h4>KAROL VERYTRAP</h4>
+    <img src="images/joel-muniz-lfiFXS9oaeU-unsplash (1).jpg" alt="KAROL VERYTRAP pic">
+    <p>Amazing reception of her fir nemo culpa beatae tempore soluta quibusdam?</p>
+    <p>Find out more here</p>
+   </div>
+
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>REINA TRAP</h4>
+    <img src="images/dayne-topkin-Z9OC6FeDKzg-unsplash.jpg" alt="REINA TRAP pic">
+    <p>Amazing reception of her first album track</p>
+    <p>Find out more here</p>
+   </div> 
+
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>VICKY ENTRAP</h4>
+    <img src="images/touzeey-1mlsIQVvbGc-unsplash.jpg" alt="VICKY ENTRAP pic">
+    <p>Amazing reception of her first album track</p>
+    <p>Find out more here</p>
+   </div>
+
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>ANNIE TRIPTRAP</h4>
+    <img src="images/gordon-cowie-3mjDLlRrnzY-unsplash.jpg" alt="ANNIE TRIPTRAP pic">
+    <p>Amazing reception of her first album track</p>
+    <p>Find out more here</p>
+   </div>
+
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>LILA MYTRAP</h4>
+    <img src="images/gordon-cowie-B75bd6qoSqQ-unsplash.jpg" alt="LILA MYTRAP pic">
+    <p>Amazing reception of her first album track.</p>
+    <p>Find out more here</p>
+   </div>
+
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>CAZZU RODRIGUEZ</h4>
+    <img src="images/gordon-cowie-iYc6NbWJKZo-unsplash.jpg" alt="CAZZU RODRIGUEZ pic">
+    <p>Amazing reception of her first album track</p>
+    <p>Find out more here</p>
+   </div>
+
+
+   <div class="news-item">
+    <p>All about</p>
+    <h4>BESTIE BEBOP</h4>
+    <img src="images/gordon-cowie-VlNmgHJ1dYg-unsplash.jpg" alt="BESTIE BEBOP pic">
+    <p>Amazing reception of her first album track</p>
+    <p>Find out more here</p>
+   </div>
+   
+</section>
+   
+ <!-- FOOTER -->
+
+  <footer class="footer">
+    <p>Developed by @esteficodes- A Technigo bootcamp project</p>
+  </footer>
+ </html>
+  
+ 
