--- a/code/index.html
+++ b/code/index.html
@@ -51,10 +51,7 @@
           <br>
           <br>
           The law, which had initially been scheduled for later in 
-          the year but was approved by Sweden's parliament on Friday, 
-          allows officials to close restaurants, shops, and public transport, 
-          Euronews reported. It also introduces fines for people who break 
-          social distancing rules....
+          the year but was approved by Sweden's parliament on Friday....
           <br>
           <a href="https://www.businessinsider.com/sweden-passes-law-to-allow-closures-amid-high-death-toll-2021-1?r=US&IR=T" 
           target="_blank">
@@ -82,7 +79,7 @@
 
     <section>
       <div class="latest"><h1>LATEST NEWS!</h1></div>
-    </section>
+    </section> 
     
 
     <!--Other news content starts here-->
