Made the site responsive

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,94 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <title>Ballet News</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+
+  <header>
+    <div class="navbar">
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#newsletter">Newsletter</a>
+      <a class="nav-link" href="#subscribe">Subscribe</a>
+    </div>
+  </header>
+
+
+  <div class="logo-h1">
+    <h1>
+      <img class="logo" img src=./images/Ballerina-clipart.png alt="Clipart ballerina dancing in a pink dress." />
+      Ballerina News
+    </h1>
+  </div>
+
+
+  <div class="big-news-container">
+    <img src="./images/Ballerina-forest.png" alt="Ballerina dancing in a beautiful forest." class="big-news-image">
+  </div>
+
+  <div>
+    <p id="big-news-category"><a href="#big-news">LOREM</a></p><br>
+
+    <p id="big-news-extract"><a href="#big-news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor
+        incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim
+        id est laborum.</a></p>
+  </div>
+
+
+
+  <div class="other-news-container">
+
+    <div class="other-news-box">
+      <img src="./images/Barre.jpg" alt="Ballerina in a black dress doing barre." class="other-news-image" />
+      <p id="other-news-extract"><a href=#other-news>Lorem ipsum dolor sit amet.</a></p>
+    </div>
+
+    <div class="other-news-box">
+      <img src="./images/Black-dress.jpg" alt="Young, pensive woman wearing pink pointe shoes and a black dress."
+        class="other-news-image" />
+      <p id="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+    </div>
+
+    <div class="other-news-box">
+      <img src="./images/Young-ballerinas.jpg" alt="Two young ballerinas dancing in a studio."
+        class="other-news-image" />
+      <p id="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+    </div>
+
+    <div class="other-news-box">
+      <img src="./images/Ballet-shoes.jpg" alt="Pink pointe shoes and a white tulle dress." class="other-news-image" />
+      <p id="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+    </div>
+
+  </div>
+
+
+
+  <hr>
+
+
+  <footer>
+    <p>&copy Caroline Fahlgren</p>
+  </footer>
+
+</body>
+
 </html>
