Added a hamburger menu

--- a/code/index.html
+++ b/code/index.html
@@ -18,6 +18,12 @@
 <body>
 
   <header>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
     <div class="navbar">
       <a class="nav-link" href="#about">About</a>
       <a class="nav-link" href="#newsletter">Newsletter</a>
@@ -29,7 +35,7 @@
   <div class="logo-h1">
     <h1>
       <img class="logo" img src=./images/Ballerina-clipart.png alt="Clipart ballerina dancing in a pink dress." />
-      Ballerina News
+      Ballet News
     </h1>
   </div>
 
